--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/result"
         android:layout_height="match_parent"
+        android:textSize="30dp"
         android:layout_weight="0.7"/>
 
     <TextView
