--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_margin="16dp"
+        android:background="@color/colorResult"
         android:text=""
         android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="@+id/btn-clear"
