--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,10 @@
         android:layout_width="60dp"
         android:layout_height="56dp"
         android:text="C"
+        style="?android:attr/borderlessButtonStyle"
         android:textSize="23sp"
+        android:textStyle="bold"
+        android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/btn-7"
         app:layout_constraintLeft_toLeftOf="@+id/btn-7" />
 
@@ -43,7 +46,7 @@
         android:layout_width="60dp"
         android:layout_height="56dp"
         android:text="@string/power"
-        android:textSize="23sp"
+        style="@style/FlatButtonBold"
         app:layout_constraintLeft_toRightOf="@+id/btn-back"
         app:layout_constraintTop_toTopOf="@+id/btn-back" />
 
@@ -51,8 +54,8 @@
         android:id="@+id/btn-percent"
         android:layout_width="60dp"
         android:layout_height="56dp"
-        android:text="%"
-        android:textSize="23sp"
+        android:text="@string/percent"
+        style="@style/FlatButtonBold"
         app:layout_constraintLeft_toRightOf="@+id/btn-0"
         app:layout_constraintTop_toTopOf="@+id/btn-0"/>
 
@@ -61,6 +64,7 @@
         android:layout_width="60dp"
         android:layout_height="56dp"
         android:text="⌫"
+        style="?android:attr/borderlessButtonStyle"
         android:textSize="25sp"
         app:layout_constraintLeft_toRightOf="@+id/btn-clear"
         app:layout_constraintTop_toTopOf="@+id/btn-clear"  />
@@ -69,8 +73,8 @@
         android:id="@+id/btn-division"
         android:layout_width="60dp"
         android:layout_height="56dp"
-        android:textSize="23sp"
         android:text="÷"
+        style="@style/FlatButtonBold"
         app:layout_constraintLeft_toLeftOf="@+id/btn-multiply"
         app:layout_constraintBottom_toTopOf="@+id/btn-multiply"
         />
@@ -80,7 +84,7 @@
         android:layout_width="60dp"
         android:layout_height="56dp"
         android:text="-"
-        android:textSize="25sp"
+        style="@style/FlatButtonBold"
         app:layout_constraintBottom_toTopOf="@+id/btn-plus"
         app:layout_constraintLeft_toLeftOf="@+id/btn-plus" />
 
@@ -90,8 +94,8 @@
         android:layout_height="56dp"
         android:layout_marginBottom="32dp"
         android:minHeight="56dp"
-        android:textSize="23sp"
         android:text="."
+        style="@style/FlatButtonBold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@+id/monitor"
         tools:ignore="MissingConstraints" />
@@ -102,8 +106,7 @@
         android:layout_height="56dp"
         android:textSize="23sp"
         android:text="="
-
-
+        style="?android:attr/borderlessButtonStyle"
         app:layout_constraintRight_toRightOf="@+id/monitor"
         app:layout_constraintTop_toTopOf="@+id/btn-percent" />
 
@@ -112,7 +115,7 @@
         android:layout_width="60dp"
         android:layout_height="56dp"
         android:text="0"
-        android:textSize="20sp"
+        style="@style/FlatButton"
         app:layout_constraintLeft_toRightOf="@+id/btn-float"
         app:layout_constraintTop_toTopOf="@+id/btn-float" />
 
@@ -121,7 +124,7 @@
         android:layout_width="60dp"
         android:layout_height="56dp"
         android:text="+"
-        android:textSize="23sp"
+        style="@style/FlatButtonBold"
         app:layout_constraintBottom_toTopOf="@+id/btn-equal"
         app:layout_constraintLeft_toLeftOf="@+id/btn-equal" />
 
@@ -130,8 +133,8 @@
         android:layout_width="60dp"
         android:layout_height="56dp"
         android:text="1"
-        android:textSize="20sp"
 
+        style="@style/FlatButton"
         app:layout_constraintLeft_toLeftOf="@+id/btn-float"
         app:layout_constraintBottom_toTopOf="@+id/btn-float" />
 
@@ -140,8 +143,7 @@
         android:layout_width="60dp"
         android:layout_height="56dp"
         android:text="3"
-        android:textSize="20sp"
-
+        style="@style/FlatButton"
         app:layout_constraintLeft_toLeftOf="@+id/btn-percent"
         app:layout_constraintBottom_toTopOf="@+id/btn-percent"/>
 
@@ -150,8 +152,7 @@
         android:layout_width="60dp"
         android:layout_height="56dp"
         android:text="2"
-        android:textSize="20sp"
-
+        style="@style/FlatButton"
         app:layout_constraintLeft_toLeftOf="@+id/btn-0"
         app:layout_constraintBottom_toTopOf="@+id/btn-0" />
 
@@ -160,8 +161,7 @@
         android:layout_width="60dp"
         android:layout_height="56dp"
         android:text="×"
-        android:textSize="23sp"
-
+        style="@style/FlatButtonBold"
         app:layout_constraintLeft_toLeftOf="@+id/btn-minus"
         app:layout_constraintBottom_toTopOf="@+id/btn-minus" />
 
@@ -170,8 +170,7 @@
         android:layout_width="60dp"
         android:layout_height="56dp"
         android:text="4"
-        android:textSize="20sp"
-
+        style="@style/FlatButton"
         app:layout_constraintLeft_toLeftOf="@+id/btn-1"
         app:layout_constraintBottom_toTopOf="@+id/btn-1"/>
 
@@ -180,8 +179,7 @@
         android:layout_width="60dp"
         android:layout_height="56dp"
         android:text="6"
-        android:textSize="20sp"
-
+        style="@style/FlatButton"
         app:layout_constraintLeft_toLeftOf="@+id/btn-3"
         app:layout_constraintBottom_toTopOf="@+id/btn-3" />
 
@@ -190,19 +188,15 @@
         android:layout_width="60dp"
         android:layout_height="56dp"
         android:text="@string/_5"
-        android:textSize="20sp"
-
+        style="@style/FlatButton"
         app:layout_constraintLeft_toLeftOf="@+id/btn-2"
         app:layout_constraintBottom_toTopOf="@+id/btn-2" />
-
-
-
     <Button
         android:id="@+id/btn-8"
         android:layout_width="60dp"
         android:layout_height="56dp"
         android:text="8"
-        android:textSize="20sp"
+        style="@style/FlatButton"
         app:layout_constraintLeft_toLeftOf="@+id/btn-5"
         app:layout_constraintBottom_toTopOf="@+id/btn-5" />
 
@@ -210,8 +204,8 @@
         android:id="@+id/btn-7"
         android:layout_width="60dp"
         android:layout_height="56dp"
-        android:textSize="20sp"
         android:text="7"
+        style="@style/FlatButton"
         app:layout_constraintLeft_toLeftOf="@+id/btn-4"
         app:layout_constraintBottom_toTopOf="@+id/btn-4"/>
 
@@ -219,12 +213,9 @@
         android:id="@+id/btn-9"
         android:layout_width="60dp"
         android:layout_height="56dp"
-        android:textSize="20sp"
+        style="@style/FlatButton"
         android:text="9"
         app:layout_constraintLeft_toLeftOf="@+id/btn-6"
         app:layout_constraintBottom_toTopOf="@+id/btn-6" />
-
-
-
 
 </android.support.constraint.ConstraintLayout>
