--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,15 +9,18 @@
     </style>
 
     <style name="FlatButtonBold" parent="Base.Widget.AppCompat.Button.Borderless">
-        <item name="android:textAppearance">@style/TextStyle</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/colorOperators</item>
         <item name="android:textSize">23sp</item>
+        <item name="android:layout_width">60dp</item>
+        <item name="android:layout_height">56dp</item>
     </style>
     <style name="FlatButton" parent="Base.Widget.AppCompat.Button.Borderless">
         <item name="android:textAppearance">@style/TextStyle</item>
         <item name="android:textColor">?colorPrimaryDark</item>
         <item name="android:textSize">20sp</item>
+        <item name="android:layout_width">60dp</item>
+        <item name="android:layout_height">56dp</item>
     </style>
 
     <style name="TextStyle" parent="android:TextAppearance.Widget.TextView">
