--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,21 +9,24 @@
     </style>
 
     <style name="FlatButtonBold" parent="Base.Widget.AppCompat.Button.Borderless">
-        <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/colorOperators</item>
-        <item name="android:textSize">23sp</item>
-        <item name="android:layout_width">60dp</item>
-        <item name="android:layout_height">56dp</item>
+        <item name="android:textAppearance">@style/TextBold</item>
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:background">@color/colorOperators</item>
+
     </style>
-    <style name="FlatButton" parent="Base.Widget.AppCompat.Button.Borderless">
-        <item name="android:textAppearance">@style/TextStyle</item>
-        <item name="android:textColor">?colorPrimaryDark</item>
-        <item name="android:textSize">20sp</item>
-        <item name="android:layout_width">60dp</item>
-        <item name="android:layout_height">56dp</item>
+    <style name="FlatButtonNormal" parent="Base.Widget.AppCompat.Button.Borderless">
+        <item name="android:textAppearance">@style/TextNormal</item>
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:background">@color/colorOperands</item>
+
     </style>
 
-    <style name="TextStyle" parent="android:TextAppearance.Widget.TextView">
+    <style name="TextNormal" parent="android:TextAppearance.Widget.TextView">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">30sp</item>
+    </style>
+    <style name="TextBold" parent="android:TextAppearance.Widget.TextView">
         <item name="android:textStyle">normal</item>
+        <item name="android:textSize">38sp</item>
     </style>
 </resources>
